--- a/ComeX.WPF/Views/ChatView.xaml
+++ b/ComeX.WPF/Views/ChatView.xaml
@@ -294,44 +294,11 @@
                         <RowDefinition Height="120"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <ListView Grid.Row="0"
-                        Background="{StaticResource DarkBlue3}"
-                        BorderThickness="0"
-                        HorizontalAlignment="Stretch"
-                        ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="ListViewItem">
-                                            <ContentPresenter />
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                                <Style.Triggers>
-                                    <Trigger Property="Control.IsMouseOver"
-                                             Value="True">
-                                        <Setter Property="Control.Background"
-                                                Value="Transparent" />
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                        <Button x:Name="LoadMessagesButton"
-                                Template="{StaticResource RoundedButtonTemplate}"
-                                HorizontalAlignment="Center"
-                                Width="30"
-                                Height="30"
-                                Command="{Binding LoadHistoryCommand}" />
-                        <uc:LoadingUserControl Width="30"
-                                               Height="30"
-                                               Visibility="Collapsed"/>
+
                         <ListView x:Name="MessagesListView"
-                                  Margin="5,5,5,5"
-                                  Height="{Binding ActualHeight, ElementName=ContentRow}"
+                                  Margin="5"
                                   HorizontalAlignment="Stretch"
                                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                  ScrollViewer.VerticalScrollBarVisibility="Disabled"
                                   ItemsSource="{Binding CurrentRoomMessages}"
                                   Background="{StaticResource DarkBlue3}"
                                   BorderBrush="{x:Null}">
@@ -355,8 +322,8 @@
                             </ListView.ItemContainerStyle>
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <WrapPanel x:Name="MessagesWrapP"
-                                               Orientation="Vertical"/>
+                                    <StackPanel x:Name="MessagesWrapP"
+                                                Orientation="Vertical" />
                                 </ItemsPanelTemplate>
                             </ListView.ItemsPanel>
                             <ListView.Resources>
@@ -366,11 +333,18 @@
                                 <DataTemplate DataType="{x:Type mvm:SurveyViewModel}">
                                     <uc:SurveyUserControl />
                                 </DataTemplate>
+                            <DataTemplate DataType="{x:Type mvm:LoadHistoryViewModel}">
+                                <Button x:Name="LoadMessagesButton"
+                                        Template="{StaticResource RoundedButtonTemplate}"
+                                        HorizontalAlignment="Center"
+                                        Width="30"
+                                        Height="30"
+                                        Command="{Binding LoadHistoryCommand}" />
+                            </DataTemplate>
                             </ListView.Resources>
                         </ListView>
-                    </ListView>
 
-                    <Grid Grid.Row="1"
+                        <Grid Grid.Row="1"
                           x:Name="TypeGrid"
                           Margin="5,0,5,10">
                         <Grid.RowDefinitions>
@@ -460,73 +434,75 @@
                         <ColumnDefinition Width="20" />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0"                     
+                    <Button Grid.Column="0"
                             BorderThickness="0"
                             Background="{StaticResource DarkBlue2}"
                             Foreground="{StaticResource LightBlue2}"
-                            Content=">"/>
+                            Content=">"
+                            Command="{Binding CloseSearchCommand}" />
                     <Rectangle Grid.Column="1"
                                Fill="{StaticResource DarkBlue1}"
                                Width="200" />
                     <Grid Grid.Column="1"
-                          x:Name="SearchGrid"
-                          Margin="5">
+                          x:Name="SearchGrid">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="70" />
+                            <RowDefinition MaxHeight="150" Height="Auto" />
                             <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid x:Name="SearchTopGrid"
                               Grid.Row="0"
-                              Width="150">
+                              Margin="5">
                             <Grid.RowDefinitions>
+                                <RowDefinition />
                                 <RowDefinition />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
 
-                            <Grid Grid.Row="0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                <Label x:Name="SearchPhraseLabel"
+                                       Foreground="{StaticResource LightBlue2}"
+                                       FontSize="12"
+                                       Content="Found " />
                                 <Label x:Name="SearchPhraseContentNumber"
-                                       Grid.Column="0"
                                        Foreground="{StaticResource LightBlue2}"
                                        FontSize="12"
                                        Content="{Binding SearchPhraseNumberLabel}" />
-                                <Label x:Name="SearchPhraseLabel"
-                                       Grid.Column="1"
+                                <Label Foreground="{StaticResource LightBlue2}"
+                                       FontSize="12"
+                                       Content="result(s)" />
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                <Label 
                                        Foreground="{StaticResource LightBlue2}"
                                        FontSize="12"
-                                       Content="Results for: " />
-                                <Label x:Name="SearchPhraseContent"
-                                       Grid.Column="2"
+                                       Content="For phrase " />
+                                <TextBlock x:Name="SearchPhraseContent"
                                        Foreground="{StaticResource LightBlue2}"
                                        FontSize="12"
-                                       Content="{Binding SearchPhraseLabel}" />
-                            </Grid>
-                            <Grid Grid.Row="1">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
+                                       Width="100"
+                                       VerticalAlignment="Center"
+                                       TextWrapping="Wrap"
+                                       Text="{Binding SearchPhraseLabel}" />
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="2" Orientation="Horizontal">
                                 <Label x:Name="SearchRoomLabel"
-                                       Grid.Column="0"
                                        Foreground="{StaticResource LightBlue2}"
                                        FontSize="12"
-                                       Content="in room: " />
+                                       Content="In room: " />
                                 <Label x:Name="SearchRoomContent"
                                        Foreground="{StaticResource LightBlue2}"
                                        FontSize="12"
                                        Content="{Binding SearchPhraseRoom}" />
-                            </Grid>
+                            </StackPanel>
                         </Grid>
                         <WrapPanel Grid.Row="1"
                                    x:Name="SearchWrapP"
                                    Background="{StaticResource DarkBlue1}"
                                    Width="190">
                             <ListView x:Name="SearchListView"
-                                      Width="180"
+                                      Width="190"
                                       ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                                       ItemsSource="{Binding SearchMessages}"
                                       Background="{StaticResource DarkBlue1}"
@@ -545,7 +521,7 @@
                                 <ListView.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <WrapPanel x:Name="SearchMessagesWrapP"
-                                                   Orientation="Vertical" />
+                                                   Orientation="Vertical"/>
                                     </ItemsPanelTemplate>
                                 </ListView.ItemsPanel>
                                 <ListView.Resources>
